<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/purple_200"
    android:padding="20dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_first"
        android:textSize="17sp"
        android:gravity="center"/>
    <Button
        android:id="@+id/btn_calc1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/text_calc1"
        android:textColor="#FFFFFF"
        android:background="@drawable/rounded_button"/>

    <Button
        android:id="@+id/btn_calc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/text_calc2"
        android:textColor="#FFFFFF"
        android:background="@drawable/rounded_button"/>
</LinearLayout>
